--- a/AppSimple/Resources/Property/migration.properties
+++ b/AppSimple/Resources/Property/migration.properties
@@ -1,18 +1,5 @@
-#===== properties loadinfo : プロパティー・ロード
+#===== Properties Info [This helps to see in Properties if this file was loaded correctly]	
 org.treasureboat.loadedApp.Properties.migration=app
 
-
-#===== Start migration after application is boot [=false]
-#===== アプリケーション起動時にマイグレションを実行する [=false]
-	
-#org.treasureboat.migration.migrateAtStartup=false
-
-#===== 対応モデル・リスト（カンマ区切り）
-#===== Supported Models
-org.treasureboat.jdbc.migration.modelNames=
-#===== add your Model Name to the end of the ModelNames list above after you have Designed your first Migration
-#AppSimple
-
-#===== アプリケーション・マイグレーション
-#===== Application Model Migration Prefix
+#===== Model Info [This information is helping the migration system how to migrate]
 AppSimple.MigrationClassPrefix=com.your.app.migration.AppSimple
