--- a/AppSimple/Resources/Property/app.properties
+++ b/AppSimple/Resources/Property/app.properties
@@ -50,10 +50,9 @@ er.extensions.ERXEnterpriseObject.updateInverseRelationships=true
 # If you want to have a custom login logo
 # WSR/login/images
 #========================================================================
-#me.webobjects.security.login.logoResource=static://login/images/logo.png
-#me.webobjects.security.login.logoResource.iPad=static://login/images/logo.png
-#me.webobjects.security.login.logoResource.iPhone=static://login/images/logo.png
-
+#org.treasureboat.security.login.logoResource.iPhone=static://login/images/logo.png
+#org.treasureboat.security.login.logoResource.iPad=static://login/images/logo.png
+#org.treasureboat.security.login.logoResource=static://login/images/logo.png
 
 #========================================================================
 # Note:  If you want to have a custom App Banner add rules to the 
