--- a/AppSimple/Resources/Property/TBJavaMail.properties
+++ b/AppSimple/Resources/Property/TBJavaMail.properties
@@ -2,27 +2,27 @@
 er.extensions.load.Properties.TBJavaMail.user=production
 
 #===== 必須項目："centralize" メールの送り先メール・アドレス
-er.javamail.adminEmail=admin@mydomain.com
+org.treasureboat.javamail.adminEmail=admin@mydomain.com
 
 #===== メール・デバッグ情報を表示するかどうか。プロトコル・レベル情報を含む
 #===== SMTP 設定時に問題がある場合、これを true するといいのです。
-er.javamail.debugEnabled=false
-er.javamail.centralize=false
+org.treasureboat.javamail.debugEnabled=false
+org.treasureboat.javamail.centralize=false
 
 #===== SMTP 送信ホスト
-er.javamail.smtpProtocol=smtps
-er.javamail.smtpPort=465
+org.treasureboat.javamail.smtpProtocol=smtps
+org.treasureboat.javamail.smtpPort=465
 
 #===== セットされててない場合には WOHost へ送信が行われる
-er.javamail.smtpHost=smtp.gmail.com
+org.treasureboat.javamail.smtpHost=smtp.gmail.com
 
 #===== SMTP 送信に認証が必要かどうかをセットします。
 #===== true の場合には下記のユーザとパスワード情報もセットする必要があります。
-er.javamail.smtpAuth=true
+org.treasureboat.javamail.smtpAuth=true
 
 #===== SMTP サーバへの認証ログインのユーザ名
-er.javamail.smtpUser=smtpuser@mydomain.com
+org.treasureboat.javamail.smtpUser=smtpuser@mydomain.com
 
 #===== SMTP サーバへの認証ログインのパスワード
-#er.javamail.smtpPassword.@encrypted=
-er.javamail.smtpPassword=mypassword
+#org.treasureboat.javamail.smtpPassword.@encrypted=
+org.treasureboat.javamail.smtpPassword=mypassword
