--- a/AppSimple/.classpath
+++ b/AppSimple/.classpath
@@ -6,7 +6,11 @@
 	<classpathentry kind="con" path="WOFramework/TBEnterprise"/>
 	<classpathentry kind="con" path="WOFramework/TBWebCore"/>
 	<classpathentry kind="con" path="WOFramework/TBExtensions"/>
-        <classpathentry kind="con" path="WOFramework/TBPrototypes"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="WOFramework/TBPrototypes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-9">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
