--- a/AppSimple/.classpath
+++ b/AppSimple/.classpath
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="Sources"/>
+	<classpathentry kind="src" output="target/classes" path="Sources">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+
 	<classpathentry kind="con" path="WOFramework/TBFoundation"/>
 	<classpathentry kind="con" path="WOFramework/TBContentsDelivery"/>
 	<classpathentry kind="con" path="WOFramework/TBEnterprise"/>
 	<classpathentry kind="con" path="WOFramework/TBWebCore"/>
 	<classpathentry kind="con" path="WOFramework/TBExtensions"/>
 	<classpathentry kind="con" path="WOFramework/TBPrototypes"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-9">
+	
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
 			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
