fix build properties

--- a/AppSimple/build.properties
+++ b/AppSimple/build.properties
@@ -1,7 +1,7 @@
 project.name=AppSimple
 project.type=application
 principalClass=com.your.app.Application
-classes.dir=bin
+classes.dir=target/classes
 customInfoPListContent=
 webXML=false
 webXML_CustomContent= 
